--- a/src/input.css
+++ b/src/input.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 :root {
   --background: oklch(1 0 0);
@@ -76,13 +76,29 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+    font-family: 'JetBrains Mono', monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-feature-settings:
+      "calt" 1,
+      "liga" 1,
+      "ss01" 1,
+      "ss02" 1,
+      "ss03" 1,
+      "ss04" 1,
+      "ss05" 1,
+      "ss06" 1,
+      "ss07" 1,
+      "ss08" 1,
+      "ss09" 1;
   }
 }
 
 @layer utilities {
-  body::before {
+  /* body::before {
     content: "";
     position: fixed;
     top: 0;
@@ -92,13 +108,13 @@
     pointer-events: none;
     z-index: 1;
     background-image: url("data:image/svg+xml,%3C!-- svg: first layer --%3E%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.1' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    background-size: 3rem;
-    opacity: 0.5;
-  }
+    background-size: 4rem;
+    opacity: 0.2;
+  } 
 
   .dark body::before {
     opacity: 0.1;
-  }
+  } */
 
   .animate-fade-in-up {
     animation: fade-in-up 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
@@ -109,9 +125,19 @@
       opacity: 0;
       transform: translateY(24px);
     }
+
     to {
       opacity: 1;
       transform: translateY(0);
     }
+  }
+
+  .svg-blur {
+    filter: blur(300px) !important;
+    -webkit-filter: blur(300px) !important;
+    -moz-filter: blur(300px) !important;
+    -o-filter: blur(300px) !important;
+    -ms-filter: blur(300px) !important;
+    filter: url(#blur) !important;
   }
 }
